# orca

./: .editorconfig  .gitignore  ORCA_PROJECT_STUDY.md  PLAN-incremental-refinement.md  PROJECT_STUDY.md  README.md  SPEC.md  mypy.ini  orca-ir-validator-phase1.md  orch.py  pyproject.toml  ruff.toml  spec-schema-v2-gap-analysis.md
.orch/: orch.db
.pi/skills/ir/: SKILL.md
.plan/: plan-009-ralph-planning-loop-refactor.md
commands/: __init__.py  add.py  claim.py  complete.py  decompose.py  fail.py  heartbeat.py  info.py  init.py  list.py  log.py  reclaim.py  status.py
db/: connection.py  schema.py
docs/: hooks.md  ir-generation-revision-plan.md  plan.md  validate.md
models/: __init__.py  loop.py  task.py  task_run.py
orca/: __main__.py
orca/commands/: __init__.py  add.py  claim.py  cleanup.py  complete.py  decompose.py  fail.py  heartbeat.py  info.py  init.py  list.py  log.py  loop.py  metrics.py  migrate.py  plan.py  reclaim.py  refine.py  serve.py  status.py  validate_scenarios.py
orca/data/: spec-schema-v2.json
orca/db/: __init__.py  connection.py  schema.py
orca/db/migrations/: 003_phase2_hidden_scenarios_up.sql  004_retry_limits_up.sql
orca/hooks/: __init__.py  pre_commit.py
orca/models/: __init__.py  loop.py  task.py  task_run.py
orca/plan/: __init__.py  generator.py  parser.py  schema.py
orca/utils/: identity.py  llm.py  logging.py  spinner.py  validator.py
orca/validate/: __init__.py  engine.py  generator.py  installer.py  templates.py
tests/: conftest.py
tests/integration/: test_db_connection.py  test_metrics_fix.py  test_status_crash.py  test_task_model.py
tests/integration/test_commands/: conftest.py  test_add.py  test_claim.py  test_complete.py  test_fail.py  test_info.py  test_list.py
tests/unit/test_utils/: test_identity.py  test_logging.py  test_time.py
tests/unit/test_validators/: test_validator.py
utils/: __init__.py  identity.py  time.py
